--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node ./build/server.js",
     "start:dev": "tsx watch ./src/server.ts",
-    "build": "tsup ./src --out-dir build"
+    "build": "tsup ./src --out-dir build",
+    "test:watch": "vitest --dir ./src/useCases",
+    "test": "vitest run --dir ./src/useCases"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +32,7 @@
   "dependencies": {
     "@fastify/cookie": "8.3.0",
     "@fastify/jwt": "6.7.1",
+    "@prisma/client": "4.14.0",
     "bcryptjs": "2.4.3",
     "dotenv": "16.0.3",
     "fastify": "4.17.0",
