--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "test:watch": "vitest --dir ./src/useCases",
     "test": "vitest run --dir ./src/useCases",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http/controllers",
+    "test:e2e:watch": "vitest --dir src/http/controllers"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +43,7 @@
     "bcryptjs": "2.4.3",
     "dotenv": "16.0.3",
     "fastify": "4.17.0",
+    "npm-run-all": "4.1.5",
     "zod": "3.21.4"
   }
 }
